fixed mini-transaction spacing

--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,6 +1,7 @@
 :host {
+  margin-block-start: var(--margin-top);
+
   --gap: 2rem;
-  margin-block-start: 8rem;
   display: grid;
   row-gap: var(--gap);
 
@@ -12,7 +13,10 @@
   justify-content: center;
 
   @media (min-width: 768px) {
+    padding: 2rem;
+
     --gap: 1.5rem;
+    column-gap: 2rem;
     grid-template-columns: 1.5fr 1fr;
     grid-template-areas:
       'user transactions'
@@ -40,7 +44,7 @@
 #links {
   grid-area: links;
   display: flex;
-  gap: 0.5rem;
+  gap: 1rem;
   align-items: center;
   justify-content: space-around;
 }
