--- a/src/app/dashboard/mini-transactions/mini-transactions.component.scss
+++ b/src/app/dashboard/mini-transactions/mini-transactions.component.scss
@@ -27,7 +27,7 @@ table {
     right: 0;
     height: 3rem;
     color: #fff;
-    background-color: #7986cb;
+    background-color: var(--clr-accent);
     border-bottom: 1px solid lightgray;
 
     display: flex;
