--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,7 +14,7 @@ body {
 @import 'tailwindcss/utilities';
 
 :root {
-  --clr-accent: #7986cb;
+  --clr-accent: #673ab7de;
   --clr-primary: #673ab7;
   --clr-border: lightgray;
   --clr-white: #fff;
